log/build_2026-05-09_16-19-12/dxl_wt_openarm_leader/stdout_stderr.log
Consolidate compiler generated dependencies of target read_write_wt_position_node
[ 33%] Built target pub_current_node
[ 66%] Built target pub_position_node
[ 83%] Building CXX object CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp: In member function ‘void ReadWriteWTNode::read_present_position()’:
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:269:44: error: ‘present_velocity’ was not declared in this scope
  269 |       double vel_rad = static_cast<double>(present_velocity)*0.229*(2.0 * M_PI / 60.0);
      |                                            ^~~~~~~~~~~~~~~~
/home/tky/workspace/openarm_ws/src/dxl_wt_openarm_leader/src/read_write_wt_position_node.cpp:269:14: warning: unused variable ‘vel_rad’ [-Wunused-variable]
  269 |       double vel_rad = static_cast<double>(present_velocity)*0.229*(2.0 * M_PI / 60.0);
      |              ^~~~~~~
gmake[2]: *** [CMakeFiles/read_write_wt_position_node.dir/build.make:76: CMakeFiles/read_write_wt_position_node.dir/src/read_write_wt_position_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:141: CMakeFiles/read_write_wt_position_node.dir/all] Error 2
gmake: *** [Makefile:146: all] Error 2
